Uploading Assignmnet updates

--- a/styles/farmfresh_home.css
+++ b/styles/farmfresh_home.css
@@ -1,80 +1,22 @@
-* {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-}
-
-html {
-    min-height: 100vh;
-}
-
-.background_image {
-    height: 100%;
-    background-image: url(../images/food_bg_image.jpeg);
-    background-size: cover;
-    background-position: top,right;
-    z-index: -1;
-}
-
-.logo{
-    display:none;
-}
-
-.nav_menu {
-    display: flex;
-    justify-content: space-around;
-    color:antiquewhite;
-    background-color: transparent;
-    opacity:0.80;
-}
-
-.nav_menu a{
-    color: #fff;
-    background-color: #2d2c2b;
-}
-
-.hero_content {
-    background-color: transparent;
-    color: #fff;
-    padding: 32px;
-    display: flex;
-    justify-content: center;
-    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.318), 0 0 25px rgb(10, 18, 59), 0 0 5px rgba(111, 230, 141, 0.575);
-}
-
-.hero_main_content {
-    justify-content: center;
-    align-content: center;
-    font-size: 1.5rem;
-}
-
-.title {
-    padding: 16px;
-    font-size: 6vw;
-    font-weight: 550;
-    filter: none;
-    z-index: 60;
-    align-self: self-start;
-    background-color: #2d2c2b;
-    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.318), 0 0 25px rgb(215, 59, 28), 0 0 5px rgba(174, 186, 177, 0.575);
+.logo {
+    display: none;
 }
 
 .message {
-    text-shadow: 0 0 10px #FFD700, 
-    0 0 20px #FFA500, 
-    0 0 30px #FF6347;
+    text-shadow: 0 0 10px #FFD700,
+        0 0 20px #FFA500,
+        0 0 30px #FF6347;
     margin-left: 0px;
-    font-size: 3vw;
+    font-size: 4vw;
     font-weight: 400;
     font-weight: bolder;
     z-index: 40;
     border-radius: 20px;
-    color:#fff;
-    background-color: #2d2c2b;
+    color: #fff;
 }
 
 .mindset_message {
-    background-color: #f4f3ee;
+    background-image: linear-gradient(45deg, #D3959B, #BFE6BA);
     color: #b0120f;
     padding: 16px;
     font-size: 2rem;
@@ -82,25 +24,31 @@ html {
 }
 
 .mindset_segment {
-    background-color: #f4f3ee;
     color: #b0120f;
-    display: grid;
-    grid-template: repeat(2, 1fr) / repeat(2, 1fr);
+    display: flex;
+    flex-direction: column;
+    ;
     padding: 32px;
-    gap: 16px;
+}
+
+.mindset_segment img {
+    padding: 32px 32px 0 32px;
 }
 
 .mindset_segment p {
     font-size: 1.25rem;
     font-weight: bold;
+    text-align: center;
 }
 
 .mindset_segment span {
-    display:none;
+    font-size: 1rem;
+    font-weight: bold;
+    text-align: center;
 }
 
 .places_main_content {
-    background-color: #f4f3ee;
+    background-image: linear-gradient(45deg, #D3959B, #BFE6BA);
     padding: 32px;
     flex: 1 0 auto;
     color: #b0120f;
@@ -115,7 +63,7 @@ html {
 
 .places_grid_images {
     display: grid;
-    grid-template: repeat(3, 1fr) / repeat(3, 1fr);
+    grid-template: repeat(4, 1fr) / repeat(2, 1fr);
     gap: 16px;
 }
 
@@ -130,57 +78,78 @@ html {
 
 }
 
+.places_city::before {
+    content: attr(data-city);
+    position: absolute;
+    bottom: 0;
+    left: 70px;
+    background-color: rgba(54, 54, 54, 0.5);
+    padding: 5px;
+    text-align: center;
+    font-size: medium;
+    border-radius: 10%;
+    color: #fff;
+    font-weight: bold;
+    z-index: 40;
+}
 
 .footer {
-    background-color: #fff;
+    background-image: linear-gradient(45deg, #D3959B, #BFE6BA);
     color: #b0120f;
-    padding: 16px;
+    padding: 0px;
     text-align: center;
-    font-size: 1.25rem;
-
+    font-size: 1rem;
+    margin: 0;
 }
 
 .footer_content {
     display: flex;
     justify-content: space-between;
-    padding: 16px;
+    padding: 0px;
 }
 
 @media screen and (min-width: 768px) {
+
+    body {
+        background-image: linear-gradient(45deg, #D3959B, #BFE6BA);
+    }
+
+    .mindset_section {
+        background-image: linear-gradient(180deg, #D3959B, #BFE6BA);
+    }
 
     .background_image {
         height: 100%;
         background-image: url(../images/pexels-food_bg.jpeg);
         background-size: cover;
         z-index: 0;
-        animation : bg_image_change 15s linear infinite;
+        animation: bg_image_change 15s linear infinite;
     }
 
+    @keyframes bg_image_change {
 
-    @keyframes bg_image_change{
-
-        15%{
+        15% {
             background-image: url("../images/refresh-hero-home.png");
             animation-delay: 10s;
         }
 
-        30%{
+        30% {
             background-image: url("../images/food_bgimage.jpg");
             animation-delay: 30s;
         }
 
-        60%{
+        60% {
             background-image: url("../images/Media_Query_Mobile/Home_Background/bg_image_home.jpeg");
             animation-delay: 50s;
         }
 
-        80%{
+        80% {
             background-image: url("../images/pexels-food_bg.jpeg");
             animation-delay: 50s;
         }
 
-        100%{
-            background-image:url("../images/pexels-food_bg.jpeg");
+        100% {
+            background-image: url("../images/pexels-food_bg.jpeg");
             animation-delay: 30s;
         }
     }
@@ -196,12 +165,11 @@ html {
         border-radius: 10px;
         z-index: 40;
         text-align: center;
-        background-color:transparent;
+        background-color: transparent;
     }
 
     .message {
         color: #fff;
-        background-color: #f46636;
         margin-left: 35px;
         font-size: 3vw;
         font-weight: 300;
@@ -210,23 +178,13 @@ html {
         border-radius: 20px;
     }
 
-    .mindset_segment p {
-        font-size: 1.25rem;
-        font-weight: bold;
-    }
-    
-    .mindset_segment span {
-        display:inline;
-        font-weight: bold;
-    }
-
-    .logo{
-        display:inline;
+    .logo {
+        display: inline;
     }
 
     .nav_menu {
         display: flex;
-        background-color: #fff;
+        background-image: linear-gradient(45deg, #D3959B, #BFE6BA);
         justify-content: space-around;
         height: 10%;
         color: #b0120f;
@@ -247,6 +205,77 @@ html {
         background-color: #e8dba1;
     }
 
+    .mindset_message {
+        background-image: linear-gradient(45deg, #D3959B, #BFE6BA);
+        color: #b0120f;
+        padding: 16px;
+        font-size: 2rem;
+        font-weight: bold;
+    }
+
+    .mindset_segment {
+        color: #b0120f;
+        display: grid;
+        grid-template: repeat(2, 1fr) / repeat(2, 1fr);
+        gap: 16px;
+        padding: 32px;
+    }
+
+    .mindset_segment img {
+        padding: 32px 32px 0 32px;
+    }
+
+
+    .mindset_segment p {
+        font-size: 1.5rem;
+        font-weight: bold;
+        text-align: left;
+        padding-left: 32px;
+    }
+
+    .mindset_segment span {
+        display: inline-block;
+        font-size: 1.2rem;
+        font-weight: bold;
+        text-align: center;
+        padding-left: 20px;
+    }
+
+    .mindset_segment span:nth-child(3) {
+        padding-left: 80px;
+    }
+
+    .places_main_content {
+        background-image: linear-gradient(45deg, #D3959B, #BFE6BA);
+        padding: 32px;
+        flex: 1 0 auto;
+        color: #b0120f;
+    }
+
+    .places_text {
+        padding: 0 0 32px 0;
+        font-size: larger;
+        font-weight: bold;
+        font-size: 2rem;
+    }
+
+    .places_grid_images {
+        display: grid;
+        grid-template: repeat(4, 1fr) / repeat(2, 1fr);
+        gap: 16px;
+    }
+
+    .places_city {
+        position: relative;
+    }
+
+    .places_city img {
+        height: 100%;
+        width: 100%;
+        object-fit: cover;
+
+    }
+
     .places_city::before {
         content: attr(data-city);
         position: absolute;
@@ -255,7 +284,7 @@ html {
         background-color: rgba(54, 54, 54, 0.5);
         padding: 5px;
         text-align: center;
-        font-size: medium;
+        font-size: 1.5rem;
         border-radius: 10%;
         color: #fff;
         font-weight: bold;
@@ -268,9 +297,10 @@ html {
         padding: 16px;
         text-align: center;
         font-size: 1.5rem;
-    
+        background-image: linear-gradient(45deg, #BFE6BA, #D3959B);
+
     }
-    
+
     .footer_content {
         display: flex;
         justify-content: space-between;
