--- a/styles/recipies.css
+++ b/styles/recipies.css
@@ -1,247 +1,237 @@
-*{
-    box-sizing: border-box;
- 
+.logo {
+    display: none;
 }
 
-html{
-    height:100vh;
-    margin:0;
-    padding:0;
+.recipe_content_start {
+    min-height: 100%;
+    margin: 0;
 }
 
-body{
-    height:100%;
-    background-color: #fff;
-    padding: 0;
-    background-image: url(../images/recipies/bg_image.jpeg);
-    background-size: cover;
-    background-attachment: fixed;  
-    margin:0;
+.tagline {
+    font-size: 1.45rem;
+    color: rgb(101, 6, 226);
+    background-image: linear-gradient(45deg, #D3959B, #BFE6BA);
+    padding: 16px;
 }
 
-.recipe_content_start{
-    min-height:100%;
-    margin:0;
-}
-
-
-.logo{
-    display:none;
-}
-
-.tagline{
-    font-size:2rem;
-}
-
-.nav_menu{
-   display:flex;
-   justify-content: space-around;
-   font-size: 3rem;
-}
-
-.nav_menu a{
-    color:rgb(234, 217, 217);
-    font-weight: bold;
-    font-size: 1.5rem;
-}
-
-.nav_menu a:hover{
-    background-color: #2eff17;
-}
-
-.recipies_intro{
+.recipies_intro {
     font-size: 3.5rem;
     font-weight: bold;
     text-align: center;
-    padding:16px;
     color: rgb(234, 217, 217);
-    text-shadow: 1px 1px 2px black, 0 0 25px rgb(215, 59, 28), 0 0 5px rgb(36, 7, 69);
 }
 
-.section_header{
-    font-size: 1.75rem;
+.section_header {
+    font-size: 1.35rem;
     font-weight: bold;
-    color: rgb(242, 134, 63);
-    text-shadow: 1px 1px 2px black, 0 0 10px blue, 0 0 5px rgba(0, 0, 139, 0.77);
+    color: rgb(101, 6, 226);
     text-align: center;
 
 }
 
-.weekly_special_section{
-    position:relative;
+.weekly_special_section {
+    position: relative;
     overflow: hidden;
-    background-color: rgba(250, 235, 215, 0.275);
-   
+    background-image: linear-gradient(90deg, #BFE6BA, #D3959B);
 }
 
-.weekly_special_content{
-    display:flex;
+.weekly_special_content {
+    display: flex;
     flex-direction: column;
 }
 
 
-.weekly_special_content img{
-    display:flex;
+.weekly_special_content img {
+    display: flex;
     width: 100%;
     height: auto;
-    padding:16px 16px 8px 16px;
+    padding: 16px 16px 8px 16px;
 }
 
-.image_container{
-    position:relative;
+.image_container {
+    position: relative;
 }
 
 
-.image_text{
-    position:absolute;
+.image_text {
+    position: absolute;
     bottom: 10px;
-    left:100px;
+    left: 100px;
     font-weight: bolder;
-    font-size: 1.5rem;
+    font-size: 1.05rem;
     background-color: rgb(46, 26, 85);
-    opacity: 0.8 ;
+    opacity: 0.8;
     text-align: center;
     box-shadow: rgb(133, 220, 62);
-    color:rgb(255, 251, 251);
+    color: rgb(255, 251, 251);
 }
 
-/* .image_text.large{
-    position:absolute;
-    bottom: 10px;
-    left:30px;
-    font-weight:bolder;
-    font-size: 0.85rem;
-    background-color: transparent;
-    opacity: 0.5 ;
-    text-align: center;
-    box-shadow: rgb(82, 81, 81);
-    color:rgb(0, 0, 0);
-} */
-
 .footer {
-    background-color: #fff;
+    background-image: linear-gradient(45deg, #D3959B, #BFE6BA);
     color: #b0120f;
     padding: 0;
     text-align: center;
     font-size: 1rem;
-    margin:0;
+    margin: 0;
 }
 
 .footer_content {
     display: flex;
     justify-content: space-between;
     padding: 0;
-    margin:0;
+    margin: 0;
 }
 
-@media screen and (min-width:768px){
-    
-    .logo{
-        display:inline;
+@media screen and (min-width:768px) {
+
+    body {
+        background-image: linear-gradient(90deg, #BFE6BA, #D3959B);
     }
 
-    .nav_menu{
-        display:flex;
-        background-color: #fff;
+    .background_image {
+        height: 100%;
+        background-image: url(../images/pexels-food_bg.jpeg);
+        background-size: cover;
+        z-index: 0;
+        animation: bg_image_change 15s linear infinite;
+    }
+
+
+    @keyframes bg_image_change {
+
+        15% {
+            background-image: url("../images/refresh-hero-home.png");
+            animation-delay: 10s;
+        }
+
+        30% {
+            background-image: url("../images/food_bgimage.jpg");
+            animation-delay: 30s;
+        }
+
+        60% {
+            background-image: url("../images/Media_Query_Mobile/Home_Background/bg_image_home.jpeg");
+            animation-delay: 50s;
+        }
+
+        80% {
+            background-image: url("../images/pexels-food_bg.jpeg");
+            animation-delay: 50s;
+        }
+
+        100% {
+            background-image: url("../images/pexels-food_bg.jpeg");
+            animation-delay: 30s;
+        }
+    }
+
+    .logo {
+        display: inline;
+    }
+
+    .tagline {
+        font-size: 2.5rem;
+        color: rgb(101, 6, 226);
+        padding: 16px;
+    }
+
+    .nav_menu {
+        display: flex;
+        background-image: linear-gradient(45deg, #D3959B, #BFE6BA);
         justify-content: space-around;
-        height: 5%;
+        height: 10%;
         color: #b0120f;
         align-items: center;
         font-size: 1.5rem;
         font-weight: bold;
-        padding:0px;
-    
+        margin: 0;
+        padding: 0;
     }
-    
-    .nav_menu a{
-        color:#b0120f;
+
+    .nav_menu a {
+        color: #b0120f;
         font-weight: bolder;
     }
-    
-    .nav_menu a:hover{
+
+    .nav_menu a:hover {
         background-color: #ffd517;
     }
 
-    
-    .weekly_special_section{
-        position:relative;
+
+    .weekly_special_section {
+        position: relative;
         overflow: hidden;
         background-color: rgba(250, 235, 215, 0.275);
-    
+
     }
 
-    .weekly_special_content{
-        display:grid;
+    .weekly_special_content {
+        display: grid;
         grid-auto-columns: 27%;
         grid-auto-flow: column;
-        padding:0 48px 35px 48px;
-        gap:16px;
+        padding: 0 48px 35px 48px;
+        gap: 16px;
         animation: slideleft 15s linear infinite;
     }
 
-    @keyframes slideleft{
-        0%{
+    @keyframes slideleft {
+        0% {
             transform: translateX(10%);
         }
 
-        100%{
+        100% {
             transform: translatex(-100%);
         }
     }
 
-    .weekly_special_content img:hover{
-        transform:scale(1);
-        transition: transform 0.3s ease-in-out;
-    }
-
-    .weekly_special_content:hover{
+    .weekly_special_content:hover {
         animation-play-state: paused;
     }
 
-    .weekly_special_content img{
+    .weekly_special_content img {
         width: 100%;
         height: auto;
     }
 
-    .image_container{
-        position:relative;
+    .image_container {
+        position: relative;
     }
 
 
-    .image_text{
-        position:absolute;
+    .image_text {
+        position: absolute;
         bottom: 10px;
-        left:50px;
-        font-weight:bolder;
+        left: 50px;
+        font-weight: bolder;
         font-size: 1.45rem;
-        background-color:  rgb(255, 131, 146);
-        opacity: 0.5 ;
+        background-color: rgb(255, 131, 146);
+        opacity: 0.5;
         text-align: center;
         box-shadow: rgb(133, 220, 62);
-        color:rgb(0, 0, 0);
+        color: rgb(0, 0, 0);
     }
-    
-    .image_text.large{
-        position:absolute;
+
+    .image_text.large {
+        position: absolute;
         bottom: 10px;
-        left:50px;
-        font-weight:bolder;
+        left: 50px;
+        font-weight: bolder;
         font-size: 1.25rem;
         background-color: rgb(255, 131, 146);
-        opacity: 0.5 ;
+        opacity: 0.5;
         text-align: center;
         box-shadow: rgb(82, 81, 81);
-        color:rgb(0, 0, 0);
+        color: rgb(0, 0, 0);
     }
 
     .footer {
-        background-color: #fff;
+        background-image: linear-gradient(90deg, #D3959B, #BFE6BA);
         color: #b0120f;
         text-align: center;
         font-size: 1.25rem;
-    
+
     }
-    
+
     .footer_content {
         display: flex;
         justify-content: space-between;
