--- a/styles/farmfresh_home.css
+++ b/styles/farmfresh_home.css
@@ -45,6 +45,7 @@
     font-size: 1rem;
     font-weight: bold;
     text-align: center;
+    padding-left: 32px;
 }
 
 .places_main_content {
@@ -237,12 +238,8 @@
         display: inline-block;
         font-size: 1.2rem;
         font-weight: bold;
-        text-align: center;
-        padding-left: 20px;
-    }
-
-    .mindset_segment span:nth-child(3) {
-        padding-left: 80px;
+        text-align: left;
+        padding-left: 32px;
     }
 
     .places_main_content {
