--- a/styles/farmfresh_home.css
+++ b/styles/farmfresh_home.css
@@ -1,6 +1,6 @@
-.logo {
-    display: none;
-}
+
+@media screen and (min-width: 250px) {
+
 
 .message {
     text-shadow: 0 0 10px #FFD700,
@@ -27,7 +27,6 @@
     color: #b0120f;
     display: flex;
     flex-direction: column;
-    ;
     padding: 32px;
 }
 
@@ -42,7 +41,7 @@
 }
 
 .mindset_segment span {
-    font-size: 1rem;
+    font-size: 0.80rem;
     font-weight: bold;
     text-align: center;
     padding-left: 32px;
@@ -87,26 +86,11 @@
     background-color: rgba(54, 54, 54, 0.5);
     padding: 5px;
     text-align: center;
-    font-size: medium;
-    border-radius: 10%;
+    font-size: 0.7rem;
+    border-radius:10%;
     color: #fff;
-    font-weight: bold;
     z-index: 40;
 }
-
-.footer {
-    background-image: linear-gradient(45deg, #D3959B, #BFE6BA);
-    color: #b0120f;
-    padding: 0px;
-    text-align: center;
-    font-size: 1rem;
-    margin: 0;
-}
-
-.footer_content {
-    display: flex;
-    justify-content: space-between;
-    padding: 0px;
 }
 
 @media screen and (min-width: 768px) {
@@ -193,20 +177,5 @@
         z-index: 40;
     }
 
-    .footer {
-        background-color: #fff;
-        color: #b0120f;
-        padding: 16px;
-        text-align: center;
-        font-size: 1.5rem;
-        background-image: linear-gradient(45deg, #BFE6BA, #D3959B);
-
-    }
-
-    .footer_content {
-        display: flex;
-        justify-content: space-between;
-        padding: 16px;
-    }
 
 }
