--- a/styles/products.css
+++ b/styles/products.css
@@ -1,6 +1,3 @@
-.logo {
-    display: none;
-}
 
 .category_head {
     background-image: linear-gradient(45deg, #BFE6BA, #D3959B);
@@ -42,28 +39,19 @@
 }
 
 .section_content img {
-    align-items: center;
+    align-self: center;
     padding-top: 8px;
     padding-left: 48px;
     background-color: transparent;
     padding-bottom: 32px;
     width: 70%;
-    height: 50%;
+    height: 70%;
 }
 
-.footer {
-    background-image: linear-gradient(90deg, #BFE6BA, #D3959B);
-    color: #b0120f;
-    padding: 0px;
-    text-align: center;
-    font-size: 1rem;
-    margin: 0;
-}
-
-.footer_content {
-    display: flex;
-    justify-content: space-between;
-    padding: 0px;
+.image_holder{
+    width:80%;
+    height: 80%;
+    align-self: center;
 }
 
 @media screen and (min-width: 766px) {
@@ -111,22 +99,13 @@
         padding-left: 48px;
         background-color: transparent;
         padding-bottom: 32px;
-        width: 90%;
+        width: 80%;
         height: 80%;
     }
 
-    .footer {
-        background-image: linear-gradient(45deg, #BFE6BA, #D3959B);
-        background-color: #fff;
-        color: #b0120f;
-        padding: 16px;
-        text-align: center;
-        font-size: 1.5rem;
+    .image_holder{
+        width:100%;
+        height: auto;
     }
 
-    .footer_content {
-        display: flex;
-        justify-content: space-around;
-        padding: 0px;
-    }
 }
