--- a/styles/common_styles.css
+++ b/styles/common_styles.css
@@ -261,7 +261,7 @@ body {
         height: 10%;
         color: #b0120f;
         align-items: center;
-        font-size: 1.5rem;
+        font-size: 4rem;
         font-weight: bold;
         margin: 0;
         padding: 0;
@@ -278,20 +278,22 @@ body {
     }
 
     .footer {
-        display:flex;
+        width: 100%;
+        flex-wrap: wrap;
         background-color: #fff;
         color: #b0120f;
         padding: 16px;
         text-align: center;
-        font-size: 1.5rem;
+        font-size: 1.25rem;
         background-image: linear-gradient(45deg, #BFE6BA, #D3959B);
 
     }
 
     .footer_content {
         display: flex;
-        justify-content: space-between;
+        justify-content: space-evenly;
         padding: 16px;
+        text-align: center;
     }
 
 }
